refactor: 모노레포 구조로 전환
- pnpm workspace 설정 추가
- turbo.json 추가하여 빌드 파이프라인 구성
- apps/server와 apps/web으로 프로젝트 구조 재구성
- 루트 package.json 업데이트

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-api-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "Todo API server with Express and JSON file storage",
   "type": "module",
@@ -13,4 +13,3 @@
     "cors": "^2.8.5"
   }
 }
-
