chore: Prettier 설정 업데이트 및 코드 포맷팅
- Prettier 설정 변경
  - jsxSingleQuote: true 추가
  - bracketSameLine: false 추가
  - semi: true로 변경
  - trailingComma: 'all'로 변경
  - arrowParens: 'always'로 변경
  - singleAttributePerLine: true 추가
  - endOfLine: 'auto'로 변경

- QueryProvider.tsx JSX 포맷팅 개선
  - JSX 요소를 여러 줄로 개행하여 가독성 향상

- 전체 코드베이스 포맷팅 적용
  - 새로운 Prettier 규칙에 맞게 모든 파일 포맷팅

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,12 @@
 {
-  "semi": false,
+  "jsxSingleQuote": true,
+  "bracketSameLine": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
-  "printWidth": 100,
-  "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "semi": true,
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "endOfLine": "auto",
+  "singleAttributePerLine": true,
+  "printWidth": 100
 }
-
