--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,8 +32,11 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
@@ -42,4 +45,3 @@
     "vite": "^5.0.8"
   }
 }
-
