fix: CORS 및 UUID 생성 함수 개선, 불필요한 파일 제거
- CORS origin 비교를 대소문자 구분 없이 처리하도록 수정
- UUID 생성 함수의 Buffer 조작을 더 안전하게 수정
- render.yaml의 ALLOWED_ORIGINS 대소문자 수정
- 루트의 render.yaml 파일 제거 (apps/server/render.yaml 사용)
- 디버깅 로그 제거
- README 업데이트

--- a/apps/server/render.yaml
+++ b/apps/server/render.yaml
@@ -16,7 +16,7 @@ services:
         generateValue: true
       # CORS 허용 도메인 설정
       - key: ALLOWED_ORIGINS
-        value: https://ming-Jo.github.io
+        value: https://ming-jo.github.io
       # Rate Limiting 설정
       - key: RATE_LIMIT_MAX
         value: '100'
