--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,16 +1,18 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Todo API server with Express and JSON file storage",
+  "description": "Todo API server with Express and Supabase",
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js"
+    "start": "node --env-file=.env server.js",
+    "dev": "node --env-file=.env --watch server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.1.5"
+    "express-rate-limit": "^7.1.5",
+    "@supabase/supabase-js": "^2.39.0",
+    "cookie-parser": "^1.4.6"
   }
 }
