ci: 프론트엔드 배포 워크플로우 개선
- apps/web 폴더 변경사항만 감지하도록 paths 필터 추가
- pnpm-lock.yaml 변경사항도 감지하도록 추가
- 파일명 변경

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,9 +1,13 @@
-name: Deploy to GitHub Pages
+name: Deploy Frontend to GitHub Pages
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'apps/web/**'
+      - 'pnpm-lock.yaml'
+      - '.github/workflows/deploy-web.yml'
   workflow_dispatch:
 
 permissions:
