--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,10 +9,11 @@
     "dev": "node --env-file=.env --watch server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "express-rate-limit": "^7.1.5",
     "@supabase/supabase-js": "^2.39.0",
-    "cookie-parser": "^1.4.6"
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "qs": "^6.14.1"
   }
 }
